--- a/custom.scss
+++ b/custom.scss
@@ -42,7 +42,7 @@ body {
     font-family: var(--bs-body-font-family);
     font-size: var(--bs-body-font-size);
     font-weight: var(--bs-body-font-weight);
-    line-height: var(--bs-body-line-height);
+    line-height: 1.0;
     text-align: var(--bs-body-text-align);
 }
 
