--- a/custom.scss
+++ b/custom.scss
@@ -39,11 +39,13 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 
 body {
     margin: 0;
+    padding: 0 400px;
     font-family: var(--bs-body-font-family);
     font-size: var(--bs-body-font-size);
     font-weight: var(--bs-body-font-weight);
-    line-height: 1.0;
+    line-height: 1.25;
     text-align: var(--bs-body-text-align);
+    color: #333;
 }
 
 .centered-text {
